* Show inactive airports, they have their own zoom treshold for dot and label
* Filter airport traffic to only show traffic in the vicinity of airport
* Show rings of airport congestion around airports 
* Doubleclick to center map, right or left click to pan
* Request routes from route providers. So far only vroute is integrated, 
  but we asked all other major route databases to join us

fixed:  
* Docks restore correctly on window minimize/restore
* Allow to disable border lines by setting strength to 0
* OpenGL labels rendering: big airports will draw over smaller ones, 
  labels are less conservative in decluttering (allow a bit of overlap on the edges) 

... WIP

QuteScoop Changelog - Version 1.0.2

* Fixed a VATSIM display bug introduced by a new blank line. Patch was
  submitted by Jonas Eberle - thanks!

QuteScoop Changelog - Version 1.0.2 alpha

* Loading of navigation database in the XPlane 9 format. This is a free
  database that can be downloaded from http://data.x-plane.com
* Plotting of flight route according to the filed flight plan
* No longer filters XXXX_TL_XXX stations. Only _T_, _T1_, _T2_, _T3_ are filtered.

QuteScoop Changelog - Version 1.0.1

* Improved support for 3rd party networks (example MCDU)

QuteScoop Changelog - up to Version 1.0.0

Iteration 1
* Create a work environment based on Eclipse and QT4 on Mac
* Create a basic application that shows some OpenGL content and a menue.
* Show a globe in the OpenGL window (port code from Dolomynum)
* Parse whazzup.txt
* Show aircraft positions from whazzup.txt on the globe

Iteration 2
* Parse FIR boundaries
* Show ATC from whazzup.txt on the globe
* Show aircraft labels

Iteration 3
* read airport data
* show online TWR/APP on map
* Show airport labels if staffed or aircraft depart/arrive
* show ATC label (for centers)
* Port to Linux

Iteration 4
* fix the memory leak
* fix the framerate
* read firdisplay.sup
* Download whazzup from IVAO + VATSIM