@@ -20,6 +20,8 @@
 #include "BookedAtcDialogModel.h"
 #include "BookedAtcSortFilter.h"
 #include "Whazzup.h"
+#include "Window.h"
+#include "ui_MainWindow.h"
 
 BookedAtcDialog *bookedAtcDialog = 0;
 
@@ -51,6 +53,11 @@ BookedAtcDialog::BookedAtcDialog() :
     dateFilter->setMinimumDate(QDateTime::currentDateTime().toUTC().date().addDays(-1));
     //dateFilter->setMaximumDate(QDateTime::currentDateTime().date().addMonths(1));
     timeFilter->setTime(QDateTime::currentDateTime().toUTC().time());
+
+    QFont font = lblStatusInfo->font();
+    font.setPointSize(lblStatusInfo->fontInfo().pointSize() - 1);
+    lblStatusInfo->setFont(font); //make it a bit smaller than standard text
+
     refresh();
 }
 
@@ -58,6 +65,17 @@ void BookedAtcDialog::refresh() {
     bookedAtcModel.setClients(Whazzup::getInstance()->realWhazzupData().getBookedControllers());
     treeBookedAtc->header()->resizeSections(QHeaderView::ResizeToContents);
     bookedAtcSortModel->invalidate();
+
+    const WhazzupData &data = Whazzup::getInstance()->realWhazzupData();
+
+    QString msg = QString("got bookings %1")
+                  .arg(data.bookingsTimestamp().date() == QDateTime::currentDateTime().toUTC().date() // is today?
+                        ? QString("today %1").arg(data.bookingsTimestamp().time().toString())
+                        : (data.bookingsTimestamp().isValid()
+                           ? data.bookingsTimestamp().toString("ddd yyyy/MM/dd HH:mm:ss")
+                           : "not downloaded")
+                        );
+    lblStatusInfo->setText(msg);
 }
 
 void BookedAtcDialog::on_editFilter_textChanged(QString searchStr)
@@ -108,4 +126,10 @@ void BookedAtcDialog::on_dateFilter_dateChanged(QDate date)
 
 void BookedAtcDialog::modelSelected(const QModelIndex& index) {
 	bookedAtcModel.modelSelected(bookedAtcSortModel->mapToSource(index));
+}
+
+void BookedAtcDialog::on_tbPredict_clicked()
+{
+    hide();
+    Whazzup::getInstance()->setPredictedTime(QDateTime(dateFilter->date(), timeFilter->time(), Qt::UTC));
 }
