@@ -14,7 +14,7 @@
    <string>Booked ATC</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="Resources.qrc">
     <normaloff>:/icons/qutescoop.png</normaloff>:/icons/qutescoop.png</iconset>
   </property>
   <property name="sizeGripEnabled">
@@ -26,7 +26,7 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="editFilter">
        <property name="toolTip">
-        <string extracomment="search with wildcard * or regular expressions"/>
+        <string>wildcards (*, ?) and powerful regular expressions allowed</string>
        </property>
       </widget>
      </item>
@@ -40,7 +40,7 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
+     <item row="0" column="4">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Filter time:</string>
@@ -60,7 +60,7 @@
        </property>
       </spacer>
      </item>
-     <item row="0" column="6">
+     <item row="0" column="7">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>for</string>
@@ -70,7 +70,7 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="7">
+     <item row="0" column="8">
       <widget class="QSpinBox" name="spinHours">
        <property name="specialValueText">
         <string>ever</string>
@@ -89,30 +89,53 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="5">
+     <item row="0" column="6">
       <widget class="QTimeEdit" name="timeFilter">
        <property name="wrapping">
         <bool>true</bool>
        </property>
-       <property name="timeSpec">
-        <enum>Qt::UTC</enum>
-       </property>
        <property name="time">
         <time>
-         <hour>22</hour>
+         <hour>23</hour>
          <minute>59</minute>
          <second>59</second>
         </time>
        </property>
       </widget>
      </item>
-     <item row="0" column="4">
+     <item row="0" column="5">
       <widget class="QDateEdit" name="dateFilter">
        <property name="calendarPopup">
         <bool>true</bool>
        </property>
        <property name="timeSpec">
         <enum>Qt::UTC</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="9">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="10">
+      <widget class="QToolButton" name="tbPredict">
+       <property name="text">
+        <string>Warp to</string>
+       </property>
+       <property name="toolButtonStyle">
+        <enum>Qt::ToolButtonTextBesideIcon</enum>
+       </property>
+       <property name="arrowType">
+        <enum>Qt::RightArrow</enum>
        </property>
       </widget>
      </item>
@@ -124,6 +147,9 @@
       <string>Results</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
       <item>
        <widget class="QTreeView" name="treeBookedAtc">
         <property name="rootIsDecorated">
@@ -144,15 +170,41 @@
     </widget>
    </item>
    <item>
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Close</set>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="lblStatusInfo">
+       <property name="text">
+        <string>waiting for data</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="standardButtons">
+        <set>QDialogButtonBox::Close</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="Resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
