@@ -51,13 +51,8 @@
        </property>
        <item>
         <widget class="QLabel" name="lblWarpInfo">
-         <property name="font">
-          <font>
-           <pointsize>9</pointsize>
-          </font>
-         </property>
          <property name="text">
-          <string>no data</string>
+          <string>waiting for data</string>
          </property>
         </widget>
        </item>
@@ -98,41 +93,9 @@
         </widget>
        </item>
        <item>
-        <widget class="QToolButton" name="tbSubHrs">
-         <property name="text">
-          <string>...</string>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>14</width>
-           <height>24</height>
-          </size>
-         </property>
-         <property name="arrowType">
-          <enum>Qt::LeftArrow</enum>
-         </property>
-        </widget>
-       </item>
-       <item>
         <widget class="QTimeEdit" name="timePredictTime">
          <property name="wrapping">
           <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QToolButton" name="tbAddHrs">
-         <property name="text">
-          <string>...</string>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>14</width>
-           <height>24</height>
-          </size>
-         </property>
-         <property name="arrowType">
-          <enum>Qt::RightArrow</enum>
          </property>
         </widget>
        </item>
@@ -162,7 +125,7 @@
     <item>
      <widget class="QLabel" name="lblStatus">
       <property name="text">
-       <string>StatusBar Text</string>
+       <string>Statusbar Text, attached to statusbar at runtime. Same for progressbar.</string>
       </property>
      </widget>
     </item>
@@ -284,7 +247,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="metarEdit"/>
+        <widget class="QLineEdit" name="metarEdit">
+         <property name="toolTip">
+          <string>wildcards (*, ?) and powerful regular expressions allowed</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="btnRefreshMetar">
@@ -426,7 +396,11 @@ p, li { white-space: pre-wrap; }
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="searchEdit"/>
+        <widget class="QLineEdit" name="searchEdit">
+         <property name="toolTip">
+          <string>wildcards (*, ?) and powerful regular expressions allowed</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
