@@ -33,8 +33,7 @@ public:
 
 	void showDetailsDialog();
 	bool isObserver() const { return facilityType == 0; }
-	bool isStaff() const { return facilityType == 1; }
-	bool isATC() const { return facilityType >= 2; }
+    bool isATC() const { return facilityType > 0; } // facilityType = 1 is reported for FSS stations and staff (at least from VATSIM)
 
 	QString toolTip() const;
 
